--- a/css/css.css
+++ b/css/css.css
@@ -5,6 +5,11 @@ body {
 	background: url('../img/bg.png');
 	background-attachment: fixed;
 }
+p{
+ text-align:left; 
+    font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
+    color: black;   
+}
 div.title{
     padding-left: 10px;
     text-align:left; 
