--- a/css/css.css
+++ b/css/css.css
@@ -9,7 +9,10 @@ div.figcaption{
 	padding-left:40px;
 }
 div.figcaption2{
-	padding-left:30px;
+	padding-left:32px;
+}
+div.figcaption3{
+	padding-left:55px;
 }
 p{
  
