--- a/css/css.css
+++ b/css/css.css
@@ -21,8 +21,9 @@ p{
 }
 h4{
 font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
- color: black; 	
+color: black; 	
 font-size:30px;	
+font-weight:normal;
 }
 div.title{
     padding-left: 10px;
